# cannoli

./: Cargo.toml  README.md
cannoli/: Cargo.toml
examples/symbolizer/: Cargo.toml
examples/symbolizer/src/: main.rs
examples/tracer/: Cargo.toml  hello-x86_64  symbols.txt
examples/tracer/src/: main.rs
qemu-rs/: Cargo.toml  build.rs
