[package]
name = "example_symbolizer"
version = "0.1.0"
edition = "2021"

[dependencies]
jitter_always = { path = "../../jitter_always" }
cannoli = { path = "../../cannoli" }
memfd-exec = "0.1"
qemu-cannoli = {git = "https://github.com/believeinlain/qemu-cannoli.git", features = ["qemu-mipsel", "qemu-riscv64"] }
